--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,27 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bgMA"
     android:textAlignment="center"
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/name_id"
+            android:textStyle="italic"
+            android:textColor="@color/brightPurple"
+            android:textSize="20sp" />
 
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="200dp"
-            android:gravity="center"
-            android:background="@color/orange">
+            android:background="@color/orange"
+            android:gravity="center">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/mainActivityTitle"
                 android:textColor="@color/yellow"
-                android:textSize="25dp" />
+                android:textSize="25sp" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -36,9 +48,9 @@
                 android:id="@+id/btnOpenChildActivity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Move to child activity"
+                android:text="@string/changeCAButton"
                 android:textColor="@color/white"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
         </RelativeLayout>
     </LinearLayout>
